--- a/eclipse_ws/biobank2.importer/.classpath
+++ b/eclipse_ws/biobank2.importer/.classpath
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/acegi-security-1.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/antlr-2.7.6.jar"/>
 	<classpathentry kind="lib" path="lib/asm.jar"/>
 	<classpathentry kind="lib" path="lib/axis.jar"/>
 	<classpathentry kind="lib" path="lib/biobank2-beans.jar"/>
+	<classpathentry kind="lib" path="lib/biobank2-orm.jar"/>
 	<classpathentry kind="lib" path="lib/caGrid-CQL-cql.1.0-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/castor-1.0.2.jar"/>
 	<classpathentry kind="lib" path="lib/cglib-2.1.3.jar"/>
@@ -21,10 +21,10 @@
 	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
 	<classpathentry kind="lib" path="lib/sdk-client-framework.jar"/>
 	<classpathentry kind="lib" path="lib/sdk-grid-remoting.jar"/>
-	<classpathentry kind="lib" path="lib/sdk-security.jar"/>
 	<classpathentry kind="lib" path="lib/sdk-writable-client-framework.jar"/>
 	<classpathentry kind="lib" path="lib/spring.jar"/>
 	<classpathentry kind="lib" path="lib/xercesImpl.jar"/>
-	<classpathentry kind="lib" path="conf"/>
+	<classpathentry kind="lib" path="/biobank2/conf" sourcepath="/biobank2/conf"/>
+	<classpathentry kind="lib" path="lib/sdk-security.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
